--- a/modules/ytp-assets-common/src/less/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan.less
@@ -237,7 +237,6 @@ ul.resource-list {
 
 section.dataset-primary-content {
   float: left;
-  width: 780px;
 }
 
 .nonimportant-text, span.byline-dataset, span.res-format, p.dataset-license {
@@ -259,6 +258,10 @@ span.byline-contentype {
 
 .dataset-content {
   margin-bottom: 7px;
+}
+
+.dataset-sidebar {
+  display: inline-block;
 }
 
 .dataset-item-meta {
